--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">CoinApp</string>
+    <string name="logs.label.deposit">DEPOSIT</string>
+    <string name="logs.label.withdraw">WITHDRAW</string>
 </resources>
